# libx52

./: .gitattributes  .gitignore  .travis.yml  .travis_build.sh  AUTHORS  CONTRIBUTING.md  ChangeLog.md  Doxyfile.in  DoxygenLayout.xml  INSTALL.md  LICENSE  Makefile.am  README.md  annotated.html  autogen.sh  bench_pinelog.c  bug.html  classes.html  config.h.in  config.h.meson  configure.ac  configure.version  deprecated.html  dir_000005_000000.html  dir_0354751298007beb2a3261692ff9cc9e.html  dir_2990d7c532eb7441b74916b8f5365141.html  dir_39030b11ec2f66a58a20203c6f23f032.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_645212cc8010c2417e5956d1676a2316.html  dir_72bd0fa12375565f4a365205e194c9e5.html  dir_85e58cee4bf06c699396f90891b08ff4.html  dir_95d86a5d9fe4739134edff18da4046fe.html  dir_97767a50cf9a4cc236a4b6e9aa21d056.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_9dc252854a5b01c7c4bd5889aefb1f34.html  dir_b0292d3bad94bf954d564c22a4b6a641.html  dir_c4264133ce0ceb85bd09aca42f7150c0.html  dir_c802a52f71a9867085062b6c590fa632.html  dir_c802a52f71a9867085062b6c590fa632_dep.map  dir_c802a52f71a9867085062b6c590fa632_dep.md5  (+53 more)
bugreport/: Makefile.am  bugreport.c  bugreport.dox  meson.build
cli/: Makefile.am  cli_test_brightness  cli_test_clock  cli_test_indicator  cli_test_leds  cli_test_mfd  cli_test_timezone  common_infra.sh  meson.build  test_x52_cli.c  test_x52_cli_tests.c  x52_cli.c  x52cli.man
daemon/: Makefile.am  daemon.dox  default.conf.example  meson.build  protocol.dox  test_daemon_comm.py  x52ctl.c  x52d.conf  x52d.service.in  x52d_client.c  x52d_client.h  x52d_clock.c  x52d_clock.h  x52d_clutch.c  x52d_clutch.h  x52d_clutch_test.c  x52d_comm_client.c  x52d_comm_internal.c  x52d_command.c  x52d_command.h  x52d_config.c  x52d_config.def  x52d_config.h  x52d_config_apply_stubs.c  x52d_config_dump.c  x52d_config_parser.c  x52d_const.h  x52d_device.c  x52d_device.h  x52d_io.c  x52d_io.h  x52d_keyboard.h  x52d_keyboard_evdev.c  x52d_led.c  x52d_main.c  x52d_mouse.c  x52d_mouse.h  x52d_mouse_evdev.c  x52d_mouse_test.c  x52d_notify.c  (+6 more)
daemon/tests/: cli.tc
evtest/: Makefile.am  meson.build
joytest/: Makefile.am  meson.build  x52_test_clock.c  x52_test_mfd.c
lib/inih/: Makefile.am
lib/libusbx52/: Makefile.am  README.md  fopen_env.c  libusbx52.h  usb_x52_hotplug.c  usb_x52_stub.c  usb_x52_vector.c
lib/libx52/: Makefile.am  README.md  libx52.h  libx52.hpp  test_blink_shift.c  test_common.c  test_common.h  test_led.c  test_offset.c  x52_class.cpp  x52_common.h  x52_control.c  x52_core.c  x52_date_time.c  x52_hotplug.h  x52_mfd_led.c  x52_strerror.c  x52_stringify.c  x52_test_gen.py  x52_tests.json
lib/libx52io/: Makefile.am  io_axis.c  io_common.h  io_core.c  io_device.c  io_parser.c  io_strings.c  libx52io.h  test_axis.c  test_parser.c  test_parser_tests.c
lib/pinelog/: .gitignore  LICENSE  Makefile.am  README.md  autogen.sh  bench_pinelog.c  configure.ac  meson.build  pinelog.c  pinelog.h  test_pinelog.c
libusbx52/: Makefile.am  usb_x52_stub.c
libusbx52/util/: create_device_list.c  log_actions.c
libx52/: .gitignore  Makefile  Makefile.am  README.md  configure.ac  libx52.h  libx52.pc.in  meson.build  test_strings.c  x52_commands.h  x52_common.h  x52_control.c  x52_core.c  x52_date_time.c  x52_mfd_led.c  x52_stringify.c  x52control.c  x52control.h  x52core.c  x52test.c
libx52/doc/: integration.dox
libx52/src/: Makefile.am  char_map_parser_gen.c  libx52.h  x52_char_map.cfg  x52_cli.c  x52_control.c  x52_core.c  x52_date_time.c  x52_test.c  x52_test_clock.c  x52_test_common.h  x52_test_led.c  x52_test_mfd.c
libx52io/: Makefile.am  io_parser.c  libx52io.h  libx52io.pc.in  meson.build  test_axis.c  test_parser_tests.c
libx52util/: Makefile.am  libx52util.h  libx52util.pc.in  meson.build  x52_char_map.cfg
subprojects/pinelog/: .gitignore  meson.build  meson_options.txt  pinelog.c  test_pinelog.c
tests/: Makefile.am  common_infra.sh  make_tests.sh  test_led_a_amber.sh  test_led_a_green.sh  test_led_a_off.sh  test_led_a_red.sh  test_led_b_amber.sh  test_led_b_green.sh  test_led_b_off.sh  test_led_b_red.sh  test_led_clutch_amber.sh  test_led_clutch_green.sh  test_led_clutch_off.sh  test_led_clutch_red.sh  test_led_d_amber.sh  test_led_d_green.sh  test_led_d_off.sh  test_led_d_red.sh  test_led_e_amber.sh  test_led_e_green.sh  test_led_e_off.sh  test_led_e_red.sh  test_led_fire_off.sh  test_led_fire_on.sh  test_led_pov_amber.sh  test_led_pov_green.sh  test_led_pov_off.sh  test_led_pov_red.sh  test_led_t1_amber.sh  test_led_t1_green.sh  test_led_t1_off.sh  test_led_t1_red.sh  test_led_t2_amber.sh  test_led_t2_green.sh  test_led_t2_off.sh  test_led_t2_red.sh  test_led_t3_amber.sh  test_led_t3_green.sh  test_led_t3_off.sh  (+4 more)
tests/brightness/: test_brightness_led_00.sh  test_brightness_led_01.sh  test_brightness_led_02.sh  test_brightness_led_03.sh  test_brightness_led_04.sh  test_brightness_led_05.sh  test_brightness_led_06.sh  test_brightness_led_07.sh  test_brightness_led_08.sh  test_brightness_led_09.sh  test_brightness_led_0a.sh  test_brightness_led_0b.sh  test_brightness_led_0c.sh  test_brightness_led_0d.sh  test_brightness_led_0e.sh  test_brightness_led_0f.sh  test_brightness_led_10.sh  test_brightness_led_11.sh  test_brightness_led_12.sh  test_brightness_led_13.sh  test_brightness_led_14.sh  test_brightness_led_15.sh  test_brightness_led_16.sh  test_brightness_led_17.sh  test_brightness_led_18.sh  test_brightness_led_19.sh  test_brightness_led_1a.sh  test_brightness_led_1b.sh  test_brightness_led_1c.sh  test_brightness_led_1d.sh  test_brightness_led_1e.sh  test_brightness_led_1f.sh  test_brightness_led_20.sh  test_brightness_led_21.sh  test_brightness_led_22.sh  test_brightness_led_23.sh  test_brightness_led_24.sh  test_brightness_led_25.sh  test_brightness_led_26.sh  test_brightness_led_27.sh  (+218 more)
tests/indicator/: test_blink_off.sh  test_blink_on.sh  test_shift_off.sh  test_shift_on.sh
udev/: 60-saitek-x52-x52pro.rules  60-saitek-x52-x52pro.rules.in  99-saitek-x52pro.rules  Makefile.am  install-hook.sh  meson.build
x52cli/: Makefile.am
(+236 files in other folders)
